--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,4 +6,9 @@
 .pageHeader {
 	border-bottom: solid 1px #bfbfbf;
 	margin-bottom: 16px;
+	position: sticky;
+	top: 0;
+	background: #fff;
+	z-index: 10;
+	padding: 16px;
 }
